Bug 718500 - View > Character Encoding > Auto-Detect menupopup is broken. r=smontagu